fix: safari squishing

--- a/projects/components/src/table/table.component.scss
+++ b/projects/components/src/table/table.component.scss
@@ -2,11 +2,7 @@
 @import 'layout';
 
 .table {
-  display: flex;
-  flex-direction: column;
   height: 100%;
-  width: 100%;
-  position: relative;
 }
 
 .title-row {
