--- a/projects/distributed-tracing/src/shared/dashboard/widgets/table/table-widget-renderer.component.scss
+++ b/projects/distributed-tracing/src/shared/dashboard/widgets/table/table-widget-renderer.component.scss
@@ -5,9 +5,8 @@
 }
 
 .table {
-  flex: 1 1;
-  width: 100%;
-  overflow: hidden;
+  flex: 1;
+  min-height: 0;
 }
 
 .header-margin {
